@@ -1,5 +1,11 @@
 2019-01-17  Tom de Vries  <tdevries@suse.de>
 
+	PR libbacktrace/82857
+	* dwarf.c (read_attribute): Handle DW_FORM_GNU_strp_alt
+	using altlink.
+
+2019-01-17  Tom de Vries  <tdevries@suse.de>
+
 	* dwarf.c (enum attr_val_encoding): Add ATTR_VAL_NONE.
 	(read_attribute): Add altlink parameter.  Handle missing altlink for
 	DW_FORM_GNU_strp_alt and DW_FORM_GNU_ref_alt.
